--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,14 @@
         <android.support.v7.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="25dp"
+            android:background="@color/colorPrimaryDark"
             app:layout_scrollFlags="scroll|enterAlways"></android.support.v7.widget.Toolbar>
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorAccent"
             app:layout_scrollFlags="scroll|enterAlways"
             app:tabMode="scrollable">
 
@@ -88,8 +90,10 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
+                    android:id="@+id/TreningsList"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:orientation="vertical">
 
                 </LinearLayout>
