--- a/app/src/main/res/layout/treninglistelement.xml
+++ b/app/src/main/res/layout/treninglistelement.xml
@@ -15,7 +15,7 @@
         android:background="@drawable/shadow"
         app:cardBackgroundColor="@color/colorAccent"
         app:cardCornerRadius="1dp"
-        app:cardElevation="0dp"
+        app:cardElevation="2dp"
         app:cardUseCompatPadding="true">
 
         <android.support.constraint.ConstraintLayout
@@ -58,7 +58,7 @@
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:padding="10dp"
-                app:srcCompat="@drawable/weight" />
+                app:srcCompat="@drawable/abdomen" />
 
             <TextView
                 android:id="@+id/Description"
