--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -91,13 +91,14 @@
                         <HorizontalScrollView
                             android:id="@+id/horizontalScrollView"
                             android:layout_width="match_parent"
-                            android:layout_height="101dp"
-                            android:layout_marginBottom="8dp"
+                            android:layout_height="118dp"
                             android:layout_marginTop="8dp"
+                            android:fillViewport="true"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintTop_toTopOf="@+id/bg"
                             app:layout_constraintVertical_bias="1.0"
-                            tools:layout_editor_absoluteX="0dp">
+                            tools:layout_editor_absoluteX="0dp"
+                            android:scrollbarThumbHorizontal="@color/colorScroll">
 
                             <LinearLayout
                                 android:layout_width="wrap_content"
