Create Note xml.

--- a/app/src/main/res/layout/create_note.xml
+++ b/app/src/main/res/layout/create_note.xml
@@ -51,11 +51,14 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:layout_weight="1"
+                        android:background="@null"
                         android:ems="10"
-                        android:hint="0"
+                        android:hint="series"
                         android:inputType="number"
+                        android:singleLine="false"
                         android:textAlignment="center"
                         android:textColor="@color/colorPrimary"
+                        android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.336"
@@ -132,11 +135,13 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginTop="8dp"
                         android:layout_weight="1"
+                        android:background="@null"
                         android:ems="10"
-                        android:hint="0"
-                        android:inputType="number"
+                        android:hint="kg"
+                        android:inputType="numberDecimal"
                         android:textAlignment="center"
                         android:textColor="@color/colorPrimary"
+                        android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_bias="0.336"
