--- a/app/src/main/res/layout/workout_serie.xml
+++ b/app/src/main/res/layout/workout_serie.xml
@@ -37,7 +37,7 @@
                 app:layout_constraintVertical_bias="1.0" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/SeriesKg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
