--- a/app/src/main/res/layout/workoutday.xml
+++ b/app/src/main/res/layout/workoutday.xml
@@ -84,6 +84,7 @@
                 tools:layout_editor_absoluteX="0dp">
 
                 <LinearLayout
+                    android:id="@+id/NotesLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="horizontal" />
