--- a/app/src/main/res/layout/create_note.xml
+++ b/app/src/main/res/layout/create_note.xml
@@ -53,7 +53,7 @@
                         android:layout_weight="1"
                         android:background="@null"
                         android:ems="10"
-                        android:hint="series"
+                        android:hint="repetition"
                         android:inputType="number"
                         android:singleLine="false"
                         android:textAlignment="center"
@@ -84,7 +84,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_weight="1"
                     android:paddingTop="25dp"
-                    android:text="series"
+                    android:text="repetition"
                     android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
                     android:textSize="20sp"
