--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,111 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:id="@+id/appbar"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent">
+    <FrameLayout
+        android:id="@+id/content_frame"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
 
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:background="@color/colorPrimaryDark"
-            app:layout_scrollFlags="scroll|enterAlways"></android.support.v7.widget.Toolbar>
+    </FrameLayout>
 
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabs"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorAccent"
-            app:layout_scrollFlags="scroll|enterAlways"
-            app:tabMode="scrollable">
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:menu="@menu/drawer"
+        app:headerLayout="@layout/drawer_header" />
 
-            <android.support.design.widget.TabItem
-                android:id="@+id/All"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="All" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/Abdomen"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Abdomen" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/Back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Back" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/Biceps"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Biceps" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/Chest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Chest" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/Shoulders"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Shoulders" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/Legs"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Legs" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/Triceps"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Triceps" />
-
-            <android.support.design.widget.TabItem
-                android:id="@+id/OwnWorkouts"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Own Workouts" />
-        </android.support.design.widget.TabLayout>
-    </android.support.design.widget.AppBarLayout>
-
-    <android.support.v4.widget.NestedScrollView
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorPrimaryDark"
-        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">
+        android:background="@color/colorPrimaryDark">
 
-        <android.support.constraint.ConstraintLayout
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context="com.szczepaniak.dawid.treningapp.MainActivity"
-            tools:layout_editor_absoluteY="81dp">
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <ScrollView
+            <android.support.v7.widget.Toolbar
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="10dp"
+                android:background="@color/colorPrimaryDark"
+                app:layout_scrollFlags="scroll|enterAlways"></android.support.v7.widget.Toolbar>
 
-                <LinearLayout
-                    android:id="@+id/TreningsList"
-                    android:layout_width="match_parent"
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorAccent"
+                app:layout_scrollFlags="scroll|enterAlways"
+                app:tabMode="scrollable">
+
+                <android.support.design.widget.TabItem
+                    android:id="@+id/All"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:orientation="vertical">
+                    android:text="All" />
 
-                </LinearLayout>
-            </ScrollView>
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v4.widget.NestedScrollView>
+                <android.support.design.widget.TabItem
+                    android:id="@+id/Abdomen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Abdomen" />
 
-</android.support.design.widget.CoordinatorLayout>
+                <android.support.design.widget.TabItem
+                    android:id="@+id/Back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Back" />
+
+                <android.support.design.widget.TabItem
+                    android:id="@+id/Biceps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Biceps" />
+
+                <android.support.design.widget.TabItem
+                    android:id="@+id/Chest"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Chest" />
+
+                <android.support.design.widget.TabItem
+                    android:id="@+id/Shoulders"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Shoulders" />
+
+                <android.support.design.widget.TabItem
+                    android:id="@+id/Legs"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Legs" />
+
+                <android.support.design.widget.TabItem
+                    android:id="@+id/Triceps"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Triceps" />
+
+                <android.support.design.widget.TabItem
+                    android:id="@+id/OwnWorkouts"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Own Workouts" />
+            </android.support.design.widget.TabLayout>
+        </android.support.design.widget.AppBarLayout>
+
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="448dp"
+            android:layout_marginBottom="8dp"
+            android:background="@color/colorPrimaryDark"
+            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.52"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.szczepaniak.dawid.treningapp.MainActivity"
+                tools:layout_editor_absoluteY="81dp">
+
+                <ScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <LinearLayout
+                        android:id="@+id/TreningsList"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:orientation="vertical">
+
+                    </LinearLayout>
+                </ScrollView>
+            </android.support.constraint.ConstraintLayout>
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.constraint.ConstraintLayout>
+
+    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
+
+</android.support.v4.widget.DrawerLayout>
