--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -2,20 +2,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/biceps"
-            android:title="Test1" />
+            android:id="@+id/nav_account"
+            android:icon="@drawable/account"
+            android:title="My Acount" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/biceps"
-            android:title="Test2" />
+            android:id="@+id/nav_settings"
+            android:icon="@drawable/settings"
+            android:title="Settings" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/biceps"
-            android:title="Test3" />
+            android:id="@+id/nav_singout"
+            android:icon="@drawable/singout"
+            android:title="Sing Out" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/biceps"
-            android:title="Test4" />
+            android:id="@+id/nav_aboutus"
+            android:icon="@drawable/aboutus"
+            android:title="About Us" />
+        <item
+            android:id="@+id/nav_privacypolicy"
+            android:icon="@drawable/privacypolicy"
+            android:title="Privacy Policy" />
     </group>
 </menu>
