--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff8f00</color>
-    <color name="colorPrimaryDark">#c56000</color>
-    <color name="colorAccent">#ffc046</color>
+    <color name="colorPrimary">#ffa000</color>
+    <color name="colorPrimaryDark">#c67100</color>
+    <color name="colorAccent">#ffd149</color>
     <color name="colorScroll">#20c56000</color>
 
 </resources>
