--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_account"
-            android:icon="@drawable/account"
-            android:title="My Acount" />
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/settings"
-            android:title="Settings" />
-        <item
-            android:id="@+id/nav_singout"
-            android:icon="@drawable/singout"
-            android:title="Sing Out" />
-        <item
-            android:id="@+id/nav_aboutus"
-            android:icon="@drawable/aboutus"
-            android:title="About Us" />
-        <item
-            android:id="@+id/nav_privacypolicy"
-            android:icon="@drawable/privacypolicy"
-            android:title="Privacy Policy" />
-    </group>
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item
+        android:id="@+id/nav_account"
+        android:checked="true"
+        android:icon="@drawable/account"
+        android:title="My Acount" />
+    <item
+        android:id="@+id/nav_settings"
+        android:checked="true"
+        android:icon="@drawable/settings"
+        android:title="Settings" />
+    <item
+        android:id="@+id/nav_privacypolicy"
+        android:checked="true"
+        android:icon="@drawable/privacypolicy"
+        android:title="Privacy Policy" />
+    <item
+        android:id="@+id/nav_singout"
+        android:checked="true"
+        android:icon="@drawable/singout"
+        android:title="Sing Out" />
+    <item
+        android:id="@+id/nav_aboutus"
+        android:checked="true"
+        android:icon="@drawable/aboutus"
+        android:title="About Us" />
 </menu>
