--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="289dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="232dp"
+        android:visibility="gone"
         app:cardBackgroundColor="#3f51b5"
         app:cardCornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -69,7 +70,9 @@
             android:layout_marginLeft="50dp"
             android:layout_marginTop="15dp"
             android:text="Sign in with Google"
+            android:textAlignment="viewStart"
             android:textSize="14sp"
             android:textStyle="bold" />
     </android.support.v7.widget.CardView>
+
 </android.support.constraint.ConstraintLayout>
