--- a/app/src/main/res/menu/drawer.xml
+++ b/app/src/main/res/menu/drawer.xml
@@ -8,6 +8,11 @@
         android:icon="@drawable/account"
         android:title="My Acount" />
     <item
+        android:id="@+id/nav_maps"
+        android:checked="true"
+        android:icon="@drawable/mapicon"
+        android:title="Find gym" />
+    <item
         android:id="@+id/nav_settings"
         android:checked="true"
         android:icon="@drawable/settings"
