--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,4 +16,25 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+
+    <!--<style name="AppTheme.ErrorText" parent="TextAppearance.AppCompat">-->
+        <!--<item name="android:textColor">@android:color/red</item>-->
+        <!--<item name="android:textSize">16sp</item>-->
+    <!--</style>-->
+
+    <!--<style name="AppTheme.HintText" parent="TextAppearance.AppCompat">-->
+        <!--<item name="android:textColor">@color/colorPrimary</item>-->
+        <!--<item name="android:textSize">14sp</item>-->
+    <!--</style>-->
+
+    <!--<style name="AppTheme.TextInputLayoutAppearance" parent="Widget.Design.TextInputLayout">-->
+        <!--<item name="hintTextAppearance">@style/AppTheme.HintText</item>-->
+        <!--<item name="errorTextAppearance">@style/AppTheme.ErrorText</item>-->
+        <!--<item name="android:textColor">@color/colorPrimary</item>-->
+        <!--<item name="android:textColorHint">@color/colorPrimary</item>-->
+        <!--<item name="colorControlNormal">@color/colorAccent</item>-->
+        <!--<item name="colorControlActivated">@color/colorPrimaryDark</item>-->
+        <!--<item name="colorControlHighlight">@color/colorPrimaryDark</item>-->
+    <!--</style>-->
+
 </resources>
