--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="192dp"
-    android:background="@drawable/banner"
+    android:background="?attr/colorAccent"
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
@@ -19,7 +19,7 @@
         android:layout_marginEnd="16dp"
         android:text="Name Surname"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/cardview_light_background"
+        android:textColor="?attr/colorText"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -38,7 +38,7 @@
         android:layout_marginEnd="16dp"
         android:text="example@gmail.com"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/cardview_light_background"
+        android:textColor="?attr/colorText"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:layout_marginEnd="6dp"
         android:layout_marginBottom="8dp"
         android:src="@drawable/avatar"
-        app:civ_border_color="@color/colorPrimaryDark"
+        app:civ_border_color="?attr/colorPrimaryDark"
         app:civ_border_width="2dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
