--- a/app/src/main/res/layout/treninglistelement.xml
+++ b/app/src/main/res/layout/treninglistelement.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/shadow"
-        app:cardBackgroundColor="@color/colorAccent"
+        app:cardBackgroundColor="?attr/colorAccent"
         app:cardCornerRadius="1dp"
         app:cardElevation="2dp"
         app:cardUseCompatPadding="true">
@@ -27,23 +27,23 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginEnd="288dp"
+                android:background="@color/cardview_light_background"
                 android:rotation="75"
                 android:scaleX="2"
                 android:scaleY="2"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@android:color/background_light"
                 tools:layout_editor_absoluteY="16dp" />
 
             <TextView
                 android:id="@+id/Title"
                 android:layout_width="203dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="Trening Title"
                 android:textAlignment="textStart"
-                android:textColor="@android:color/background_light"
+                android:textColor="?attr/colorText"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="@+id/icon"
@@ -64,13 +64,13 @@
                 android:id="@+id/Description"
                 android:layout_width="165dp"
                 android:layout_height="24dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="Description"
                 android:textAlignment="viewStart"
-                android:textColor="@color/cardview_light_background"
+                android:textColor="?attr/colorText"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.792"
@@ -82,10 +82,10 @@
                 android:id="@+id/imageView4"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
