--- a/app/src/main/res/drawable/button.xml
+++ b/app/src/main/res/drawable/button.xml
@@ -4,10 +4,10 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android"
             android:shape="rectangle" >
 
-            <solid android:color="@color/colorPrimary"/>
+            <solid android:color="?attr/colorPrimary"/>
 
             <stroke
-                android:color="@color/colorPrimary"
+                android:color="?attr/colorPrimary"
                 android:width="2dp">
             </stroke>
 
