--- a/app/src/main/res/layout/create_note.xml
+++ b/app/src/main/res/layout/create_note.xml
@@ -57,7 +57,7 @@
                         android:inputType="number"
                         android:singleLine="false"
                         android:textAlignment="center"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="?attr/colorPrimary"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -86,7 +86,7 @@
                     android:paddingTop="25dp"
                     android:text="repetition"
                     android:textAlignment="center"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="?attr/colorPrimary"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -140,7 +140,7 @@
                         android:hint="kg"
                         android:inputType="numberDecimal"
                         android:textAlignment="center"
-                        android:textColor="@color/colorPrimary"
+                        android:textColor="?attr/colorPrimary"
                         android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -169,7 +169,7 @@
                     android:paddingTop="25dp"
                     android:text=" kg"
                     android:textAlignment="center"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="?attr/colorPrimary"
                     android:textSize="20sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -190,7 +190,7 @@
                 android:layout_marginTop="8dp"
                 android:text="Create Note"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="?attr/colorPrimary"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -203,12 +203,13 @@
                 android:id="@+id/Create"
                 android:layout_width="200dp"
                 android:layout_height="40dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
-                android:background="@color/colorPrimary"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:background="?attr/colorPrimary"
                 android:text="Create"
+                android:textColor="?attr/colorText"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
