--- a/app/src/main/res/layout/workout_serie.xml
+++ b/app/src/main/res/layout/workout_serie.xml
@@ -10,7 +10,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_margin="5dp"
-        app:cardBackgroundColor="@color/colorAccent"
+        app:cardBackgroundColor="?attr/colorAccent"
         app:cardCornerRadius="1dp"
         app:cardUseCompatPadding="true">
 
@@ -28,7 +28,7 @@
                 android:layout_marginTop="8dp"
                 android:text="kg"
                 android:textAlignment="center"
-                android:textColor="@android:color/background_light"
+                android:textColor="?attr/colorText"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.476"
@@ -44,7 +44,7 @@
                 android:layout_marginTop="8dp"
                 android:text="10 X 80"
                 android:textAlignment="center"
-                android:textColor="@android:color/background_light"
+                android:textColor="?attr/colorText"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
                 android:layout_marginTop="2dp"
                 android:text="1"
                 android:textAlignment="center"
-                android:textColor="@android:color/background_light"
+                android:textColor="?attr/colorText"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -77,7 +77,7 @@
                 android:layout_marginTop="8dp"
                 android:background="@android:color/holo_red_dark"
                 android:text="Delete"
-                android:textColor="@android:color/background_light"
+                android:textColor="?attr/colorText"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
