--- a/app/src/main/res/layout/workoutday.xml
+++ b/app/src/main/res/layout/workoutday.xml
@@ -24,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="26dp"
                 android:layout_marginBottom="8dp"
+                android:background="?attr/colorAccent"
                 android:rotation="0"
                 android:scaleX="1"
                 android:scaleY="1"
@@ -32,20 +33,19 @@
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0"
-                app:srcCompat="@color/colorAccent" />
+                app:layout_constraintVertical_bias="0.0" />
 
             <TextView
                 android:id="@+id/Date"
                 android:layout_width="190dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
                 android:text="22.09.2018"
                 android:textAlignment="textStart"
-                android:textColor="@android:color/background_light"
+                android:textColor="?attr/colorText"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -58,12 +58,12 @@
                 android:id="@+id/Index"
                 android:layout_width="25dp"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="1dp"
+                android:layout_marginBottom="8dp"
                 android:text="1"
                 android:textAlignment="center"
-                android:textColor="@android:color/background_light"
+                android:textColor="?attr/colorText"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="117dp"
                 android:layout_marginTop="8dp"
-                android:scrollbarThumbHorizontal="@color/colorScroll"
+                android:scrollbarThumbHorizontal="?attr/colorScroll"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/bg"
                 app:layout_constraintVertical_bias="1.0"
@@ -94,10 +94,11 @@
                 android:id="@+id/AddWork"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="16dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="8dp"
                 android:clickable="true"
+                app:backgroundTint="?attr/colorPrimary"
                 app:fabSize="mini"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/horizontalScrollView"
